--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,13 @@
                 android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
                 android:resource="@xml/device_filter" />
         </activity>
+        
+        <activity
+            android:name=".UserSettingActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
+        </activity>
+         
         <service android:name=".DexterityUsbReceiverService" />
     </application>
 </manifest>
