--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/gson-2.2.2.jar')
     compile files('libs/mobileservices-1.1.5.jar')
+    compile 'org.mongodb:mongo-java-driver:2.10.1'
 }
